1. Реализация кеша на SoftReference [#1592 #238734] fixed 2